log
mi.,  3 de may. de 2023  0:02:14: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f1d3b8d
mi.,  3 de may. de 2023  0:02:47: 
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f206fc0
mi.,  3 de may. de 2023  0:04:18: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8d9fb73
mi.,  3 de may. de 2023  0:13:39: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
3d4750a
mi.,  3 de may. de 2023 15:39:00: 
 sudoku.c | 73 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 72 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:70:7: error: redefinition of 'numerosValidos'
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
sudoku.c:48:7: note: previous definition of 'numerosValidos' was here
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
sudoku.c:90:7: error: redefinition of 'numerosValidos'
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
sudoku.c:70:7: note: previous definition of 'numerosValidos' was here
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
Compilation failed
9ed069f
mi.,  3 de may. de 2023 15:39:32: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|4
total_score: 15/70
8d77460
mi.,  3 de may. de 2023 15:42:10: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
b28481b
mi.,  3 de may. de 2023 15:45:36: 
 sudoku.c | 23 +++++++----------------
 1 file changed, 7 insertions(+), 16 deletions(-)
 tests:  2|4
total_score: 15/70
55b6b1c
mi.,  3 de may. de 2023 15:48:55: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
410d211
mi.,  3 de may. de 2023 15:52:38: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a662f1f
mi.,  3 de may. de 2023 15:53:46: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  2|4
total_score: 15/70
487514a
mi.,  3 de may. de 2023 15:56:25: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:11: error: unused variable 'k' [-Werror=unused-variable]
   int i,j,k;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
777252d
mi.,  3 de may. de 2023 15:56:37: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6ca78dd
mi.,  3 de may. de 2023 15:58:24: 
 sudoku.c | 27 +++++++++++++++++++++------
 1 file changed, 21 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
e12179e
mi.,  3 de may. de 2023 16:09:54: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|3
total_score: 35/70
24223d4
mi.,  3 de may. de 2023 16:10:56: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
a5a19ee
mi.,  3 de may. de 2023 16:14:11: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|2
total_score: 45/70
ec64a2b
mi.,  3 de may. de 2023 16:17:03: 
 sudoku.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
ea4d1ff
ju.,  4 de may. de 2023 12:20:38: 
 sudoku.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
be7266a
ju.,  4 de may. de 2023 12:21:55: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:240:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
Compilation failed
54054fd
ju.,  4 de may. de 2023 12:24:51: 
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:240:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
Compilation failed
5b15115
ju.,  4 de may. de 2023 12:24:59: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
15dce91
vi.,  5 de may. de 2023  1:12:00: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  10|0
total_score: 70/70
3e898ba
